# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
debug/.cache/clangd/index/: __bit_reference.9E21E8A0193DA849.idx  __config.1AD8A495802A55C9.idx  __hash_table.A81517D484317246.idx  __locale.34C34AE31BAD6750.idx  __mutex_base.3E97E6C347217CDE.idx  __node_handle.2BA895ED944F0A3F.idx  __split_buffer.CCAD2573B453A63C.idx  access.h.EFFD40B258BE65E1.idx  adjacent_find.h.74BF034C0B761908.idx  advance.h.F47FFFE302765786.idx  all_of.h.BC3F9CFFF009D7CE.idx  allocation_guard.h.18F8A827164CC3BC.idx  allocator.h.95C330CB9647ACCA.idx  allocator_traits.h.80DA00919782B0C0.idx  any_of.h.EC79CC841E96A603.idx  arithmetic.h.209D06D01720BCCF.idx  array.BDCDD0EBB37DC8BD.idx  assert.h.D809F55106F091FE.idx  assignable.h.EE9F02B13AB9BC7D.idx  assume_aligned.h.95BBCAA5C7EB3E3F.idx  atomic.82F35524D262C741.idx  back_insert_iterator.h.B610F576EBC87736.idx  binary_function.h.ABE24338E030A33A.idx  binary_negate.h.8D04B609C98F06C7.idx  binary_search.h.8966B6B4C84FA42B.idx  bind.h.95F04B9C60B87E33.idx  bind_back.h.5000AA1832F7FCB1.idx  bind_front.h.75AE0DF8E12A833C.idx  bit.FB044A1A4C4E4E96.idx  bit_cast.h.416D6AECF285CB01.idx  bitset.06ECD4FEDBBB1579.idx  board.hpp.CF415541477DA0C8.idx  boolean_testable.h.7D4F079C3A9B20A7.idx  bounded_iter.h.E3A45AE088E6A939.idx  boyer_moore_searcher.h.F1E158586F8DA694.idx  calendar.h.182B762D09438738.idx  cmath.70B9A9A4ADE8F93F.idx  (+323 more)
include/: .board.hpp.swp  .rules.hpp.swp  board.hpp  rules.hpp  structure_masks.hpp
src/: .main.cpp.swp  CMakeLists.txt  main.cpp  rules.cpp
